dropshot/tests/fail/bad_trait_only20.stderr
error: missing field `tag_definitions`
  --> tests/fail/bad_trait_only20.rs:12:18
   |
12 |     tag_config = {}
   |                  ^^

error[E0433]: failed to resolve: use of undeclared crate or module `my_api`
  --> tests/fail/bad_trait_only20.rs:28:5
   |
28 |     my_api::api_description::<MyImpl>();
   |     ^^^^^^ use of undeclared crate or module `my_api`

error[E0433]: failed to resolve: use of undeclared crate or module `my_api`
  --> tests/fail/bad_trait_only20.rs:29:5
   |
29 |     my_api::stub_api_description();
   |     ^^^^^^ use of undeclared crate or module `my_api`
